--- a/maze/index.html
+++ b/maze/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Maze creator</title>
+</head>
+<body>
+<script type="text/javascript" src="p5.min.js"></script>
+<script type="text/javascript" src="box.js"></script>
+</body>
+</html>
